Fixed issue with the filters not being displayed on mobile.

--- a/src/Asm.MooBank.Web.App/src/css/layout.css
+++ b/src/Asm.MooBank.Web.App/src/css/layout.css
@@ -1,5 +1,5 @@
     @media screen and (max-width: 767px) {
-        .row, main {
+        main {
             overflow-x: hidden; /* Temporary fix for Bootstrap row on mobile */
         }
     }
